<resources>
    <string name="app_name">Search for Reddit</string>
    <string name="search_hint">Enter query or URL</string>
    <string name="search">Search</string>
    <string name="search_description">Submit the search request</string>
    <string name="edit_search">Edit shared text and sort by time/votes etc.</string>
    <string name="action_edit_search">Edit Search</string>

    <string name="action_sort">Sort results by relevance/upvotes/post time etc.</string>
    <string name="action_time">Restrict results by post time</string>
    <string name="action_refresh">Refresh Results</string>
    <string name="action_donate">♛ Donate!</string>
    <string name="action_dark">Dark Theme</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_about">About</string>
    <string name="action_whats_new">What\'s New?</string>

    <string name="time_24">24 hours</string>
    <string name="time_week">Week</string>
    <string name="time_month">Month</string>
    <string name="time_year">Year</string>
    <string name="time_all">All Time</string>

    <string name="sort_relevance">Relevance</string>
    <string name="sort_top">Top</string>
    <string name="sort_new">New</string>
    <string name="sort_comments">Comments</string>

    <string name="comment">&#xf086;&#160;</string>
    <string name="upvote">&#xf062;&#160;</string>

    <string name="license_retrofit">• Retrofit2 - Copyright 2013 Square, Inc.</string>
    <string name="license_material_design_dimens">• Material Design Dimens - Copyright 2016 Dmitry Malkovich</string>
    <string name="license_okhttp">• OkHttp - Copyright 2016 Square, Inc.</string>
    <string name="license_gson">• google-gson - Copyright 2008 Google Inc.</string>
    <string name="license_under_apache">Apache License Version 2.0 -</string>
    <string name="about_text">&lt;font color=&#35;2196F3&gt;Search for Reddit &lt;/font&gt; is made with &lt;font color=&#35;B71C1C&gt; &#xf004; &lt;/font&gt; in Bengaluru, India.&lt;br /&gt;</string>
    <string name="about_copyright">&#xf1f9; Chaitanya Nettem chaitanya.im</string>
    <string name="license_apache">Licensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
    <string name="empty_search_box">Please enter something in the search box &#xf118;</string>
    <string name="clear_text">Clear the search box</string>
    <string name="no_internet">Oh noes! The internet cannot be reached &#xf119;</string>

    <string name="preference_file_key">chaitanya.im.searchforreddit.preference_file_key</string>
    <string name="style_pref_key">style</string>
    <string name="donate_check">check</string>

    <string name="ok_string">OK</string>
    <string name="ok_purchase">Purchase</string>
    <string name="donate_dialog_title">Choose your Donation Level</string>
    <string name="donate_dialog_title_2">You Clicked on a Donate Feature</string>
    <string name="donate_coffee_pitch">For less than the price of a coffee &lt;font color=&#35;6B4D24&gt;&#xf0f4;&lt;/font&gt; you can support continued development of this app!</string>
    <string name="donate_features">This will unlock the Dark Theme.</string>
    <string name="donate_features2">&lt;b&gt;This donation unlocks the Dark Theme.&lt;/b&gt;&lt;br /&gt;&lt;br /&gt;Choose how much you would like to donate - </string>
    <string name="donate_impossible">We\'re sorry but it looks like in app purchases are not possible from your phone at this point in time.</string>

    <string name="shared_text">Shared text:\u0020</string>
    <string name="internet_unreachable">Oh noes! The internet can\'t be reached :(</string>
    <string name="empty_search">Empty search :(</string>
    <string name="number_of_results_string">Number of results:\u0020</string>

    <string name="hn_beta">This feature is a work in progress.</string>
</resources>
