<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_under_apache"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="?attr/resultTitleColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_retrofit"
            android:layout_margin="10dp"
            android:textColor="?attr/resultTitleColor"
            android:id="@+id/retrofit"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_gson"
            android:layout_margin="10dp"
            android:textColor="?attr/resultTitleColor"
            android:id="@+id/gson"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_okhttp"
            android:layout_margin="10dp"
            android:textColor="?attr/resultTitleColor"
            android:id="@+id/okhttp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_material_design_dimens"
            android:layout_margin="10dp"
            android:textColor="?attr/resultTitleColor"
            android:id="@+id/material_design_dimens"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/licenseBoxColor"
            android:layout_margin="10dp"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:fontFamily="monospace"
            android:id="@+id/apache" />
    </LinearLayout>

</ScrollView>